--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,12 @@
 {
   "configurations": [
     {
+      "name": "Launch Bridgetown server",
+      "type": "ruby_lsp",
+      "request": "launch",
+      "program": "${workspaceRoot}/bin/bridgetown start"
+    },
+    {
       "type": "pwa-msedge",
       "name": "Launch Microsoft Edge",
       "request": "launch",
