--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
       "name": "Launch Bridgetown server",
       "type": "ruby_lsp",
       "request": "launch",
+      "url": "http://localhost:4000",
       "program": "${workspaceRoot}/bin/bridgetown start"
     },
     {
