--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "esbuild-dev": "node esbuild.config.js --watch"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "cssnano": "^6.0.1",
     "esbuild": "^0.19.2",
     "glob": "^10.3.3",
     "postcss": "^8.4.29",
+    "postcss-color-mod-function": "^3.0.3",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^15.1.0",
     "postcss-load-config": "^4.0.1",
+    "postcss-mixins": "^9.0.4",
     "postcss-preset-env": "^9.1.2",
-    "read-cache": "^1.0.0"
+    "read-cache": "^1.0.0",
+    "tailwindcss": "^3.3.5"
   },
   "dependencies": {
     "rough-notation": "^0.5.1"
