Add some recommended extensions for Bridgetown

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,16 @@
   "recommendations": [
     "ms-vscode.live-server",
     "ms-edgedevtools.vscode-edge-devtools",
-    "koichisasada.vscode-rdbg"
+    "koichisasada.vscode-rdbg",
+    "bierner.emojisense",
+    "bierner.markdown-footnotes",
+    "davidanson.vscode-markdownlint",
+    "eliostruyf.vscode-front-matter",
+    "kortina.vscode-markdown-notes",
+    "mathiassoeholm.markdown-link-updater",
+    "pascalreitermann93.vscode-yaml-sort",
+    "redhat.vscode-yaml",
+    "skn0tt.markdown-link-expander",
+    "csstools.postcss"
   ]
 }
