--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "esbuild-dev": "node esbuild.config.js --watch"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
     "cssnano": "^6.0.1",
     "esbuild": "^0.19.2",
